# modern-apis-with-fastapi

./: pyproject.toml
ch03-first-api/: mymain.py
