[tool.poetry]
name = "modern-apis-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Joris van Iersel <joriswj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
httpx = "^0.16.1"
jinja2 = "^2.11.2"
aiofiles = "^0.6.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
